--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-flask
-flask_login
-flask_migrate
-flask_wtf
-email_validator
-flask_sqlalchemy
-gunicorn
+Flask==1.1.2
+Flask_SQLAlchemy==2.4.4
+Jinja2==2.11.2
+requests==2.22.0
+Flask_Migrate==2.5.3
+Flask_WTF==0.14.3
+googletrans==3.0.0
+Werkzeug==0.16.0
+WTForms==2.3.1
+Flask_Babel==1.0.0
+SQLAlchemy==1.3.18
+Flask_Login==0.5.0
+python_bcrypt==0.3.2
